make somewhat better(yes, i am aware of the forwarding secret, and yes, its not used anymore)